--- a/views/cafe.html
+++ b/views/cafe.html
@@ -30,10 +30,10 @@
     <div class="nav-content">
       <ul class="tabs tabs-transparent">
         <li class="tab"><a class="active" href="../index.html">Inicio</a></li>
-        <li class="tab disabled"><a href="#test3">Jabon de Cafe</a></li>
-        <li class="tab"><a href="#test4">Jabon de Carbon</a></li>
-        <li class="tab"><a href="#test4">Jabon de Avena</a></li>
-        <li class="tab"><a href="#test4">Jabon de Perejil</a></li>
+        <li class="tab disabled"><a href="leche.html">Jabon de Leche</a></li>
+        <li class="tab"><a href="carbon.html">Jabon de Carbon</a></li>
+        <li class="tab"><a href="avena.html">Jabon de Avena</a></li>
+        <li class="tab"><a href="perejil.html">Jabon de Perejil</a></li>
 
       </ul>
     </div>
